Fixed css namespacing issue.
64617146

--- a/css/tree-select-bootstrap-2.css
+++ b/css/tree-select-bootstrap-2.css
@@ -1,4 +1,4 @@
-em::after{
+.tree-select em::after{
   content: ' / ';
 }
 
